new requirement added JDK 21 added , postgres DB to ChromaDB